// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoutingDestinationContentPicker displayName should correctly render absoluteDestination 1`] = `
<UnwrappedContentPickerSelect
  contentTypes={
    Array [
      "Destination",
    ]
  }
  name="routingDestination"
  onSubmit={[MockFunction]}
  selectedContentDisplayName="foobar"
/>
`;

exports[`RoutingDestinationContentPicker displayName should correctly render logicalDestination EndOfQuestionnaire 1`] = `
<UnwrappedContentPickerSelect
  contentTypes={
    Array [
      "Destination",
    ]
  }
  name="routingDestination"
  onSubmit={[MockFunction]}
  selectedContentDisplayName="End of questionnaire"
/>
`;

exports[`RoutingDestinationContentPicker displayName should correctly render logicalDestination with no data 1`] = `
<UnwrappedContentPickerSelect
  contentTypes={
    Array [
      "Destination",
    ]
  }
  name="routingDestination"
  onSubmit={[MockFunction]}
  selectedContentDisplayName="Please select..."
/>
`;

exports[`RoutingDestinationContentPicker displayName should correctly render logicalDestination with question page 1`] = `
<UnwrappedContentPickerSelect
  contentTypes={
    Array [
      "Destination",
    ]
  }
  destinationData={
    Object {
      "questionPages": Array [
        Object {
          "displayName": "hello world",
        },
      ],
    }
  }
  name="routingDestination"
  onSubmit={[MockFunction]}
  selectedContentDisplayName="hello world"
/>
`;

exports[`RoutingDestinationContentPicker should render 1`] = `
<UnwrappedContentPickerSelect
  contentTypes={
    Array [
      "Destination",
    ]
  }
  name="routingDestination"
  onSubmit={[MockFunction]}
  selectedContentDisplayName="Please select..."
/>
`;
